# raindrop-sorter

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  bootstrap.py  brainstorm.md  doc.md  pyproject.toml  requirements.txt
docs/: GETTING_STARTED.md  PRD.md
docs/agents/: domain.md
src/: centroids.py  embeddings.py  raindrop_client.py  reindex.py  resolver.py  state_machine.py  tag_rules.py  vision_worker.py  wd14_tagger.py
tests/: test_reindex.py  test_resolver.py  test_vision.py
