[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raindrop-sorter"
version = "0.1.0"
description = "Autonomous serverless agent that organizes Raindrop.io bookmarks"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.5.5",
    "modal==0.63.0",
    "numpy==1.26.4",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "sentence-transformers==3.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
